// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-context-search-beta #render should render default control no props 1`] = `
<gux-context-search-beta>
  <!---->
  <div class="gux-context">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input type="text">
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control no props With placeholder 1`] = `
<gux-context-search-beta>
  <!---->
  <div class="gux-context">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input placeholder="Search" type="text">
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control with all props 1`] = `
<gux-context-search-beta current-match="1" match-count="10">
  <!---->
  <div class="gux-context">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input placeholder="Search" type="text" value="Default Search Text">
    <div class="gux-context-control-panel">
      <div class="gux-navigation-panel" title="1 of 10">
        <span aria-label="1 of 10" class="gux-navigation-result">
          1 of 10
        </span>
        <button aria-label="Previous" class="gux-previous-button" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control with all props in disable mode & disable Navigate Mode 1`] = `
<gux-context-search-beta current-match="1" disable-navigation="true" match-count="10">
  <!---->
  <div class="gux-context gux-disabled">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input disabled="true" placeholder="Search" type="text" value="Search Disabled Navigation Disable">
    <div class="gux-context-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="10 Matches">
        <span aria-label="10 Matches" class="gux-navigation-result">
          10 Matches
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" disabled="" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control with all props in disable mode & disable Navigate Mode with 1 match 1`] = `
<gux-context-search-beta current-match="1" disable-navigation="true" match-count="1">
  <!---->
  <div class="gux-context gux-disabled">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input disabled="true" placeholder="Search" type="text" value="Search Disabled Navigation Disable">
    <div class="gux-context-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="1 Match">
        <span aria-label="1 Match" class="gux-navigation-result">
          1 Match
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" disabled="" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control with all props in disable mode & disable Navigate Mode with 100 match & long text 1`] = `
<gux-context-search-beta current-match="1" disable-navigation="true" match-count="10">
  <!---->
  <div class="gux-context gux-disabled">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input disabled="true" placeholder="Search" type="text" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
    <div class="gux-context-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="10 Matches">
        <span aria-label="10 Matches" class="gux-navigation-result">
          10 Matches
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" disabled="" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control with all props in disable mode & disable Navigate Mode with 1000000 match & long text 1`] = `
<gux-context-search-beta current-match="1" disable-navigation="true" match-count="1000000">
  <!---->
  <div class="gux-context gux-disabled">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input disabled="true" placeholder="Search" type="text" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
    <div class="gux-context-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="1,000,000 Matches">
        <span aria-label="1,000,000 Matches" class="gux-navigation-result">
          1,000,000 Matches
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" disabled="" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control with all props in disable mode & disable Navigate Mode with 1000000 match 1`] = `
<gux-context-search-beta current-match="1" disable-navigation="true" match-count="1000000">
  <!---->
  <div class="gux-context gux-disabled">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input disabled="true" placeholder="Search" type="text" value="Search Disabled Navigation Disable">
    <div class="gux-context-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="1,000,000 Matches">
        <span aria-label="1,000,000 Matches" class="gux-navigation-result">
          1,000,000 Matches
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" disabled="" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control with all props in disable mode & disable Navigate Mode with no match 1`] = `
<gux-context-search-beta current-match="0" disable-navigation="true" match-count="0">
  <!---->
  <div class="gux-context gux-disabled">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input disabled="true" placeholder="Search" type="text" value="Search Disabled Navigation Disable">
    <div class="gux-context-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="0 Matches">
        <span aria-label="0 Matches" class="gux-navigation-result">
          0 Matches
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" disabled="" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control with all props in disable mode 1`] = `
<gux-context-search-beta current-match="10" match-count="10">
  <!---->
  <div class="gux-context gux-disabled">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input disabled="true" placeholder="Search" type="text" value="Search Disabled">
    <div class="gux-context-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="10 of 10">
        <span aria-label="10 of 10" class="gux-navigation-result">
          10 of 10
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" disabled="" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control with all props in disable mode with 1 match 1`] = `
<gux-context-search-beta current-match="1" match-count="1">
  <!---->
  <div class="gux-context gux-disabled">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input disabled="true" placeholder="Search" type="text" value="Search Disabled with 1 match">
    <div class="gux-context-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="1 of 1">
        <span aria-label="1 of 1" class="gux-navigation-result">
          1 of 1
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" disabled="" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control with all props in disable mode with 100000000 match 1`] = `
<gux-context-search-beta current-match="10000" match-count="100000000">
  <!---->
  <div class="gux-context gux-disabled">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input disabled="true" placeholder="Search" type="text" value="Search Disabled with big match">
    <div class="gux-context-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="10,000 of 100,000,000">
        <span aria-label="10,000 of 100,000,000" class="gux-navigation-result">
          10,000 of 100,000,000
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" disabled="" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control with all props in disable mode with long value 1`] = `
<gux-context-search-beta current-match="1" match-count="1">
  <!---->
  <div class="gux-context gux-disabled">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input disabled="true" placeholder="Search" type="text" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
    <div class="gux-context-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="1 of 1">
        <span aria-label="1 of 1" class="gux-navigation-result">
          1 of 1
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" disabled="" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control with all props in disable mode with long value with 100000000 match 1`] = `
<gux-context-search-beta current-match="1100" match-count="100000001">
  <!---->
  <div class="gux-context gux-disabled">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input disabled="true" placeholder="Search" type="text" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
    <div class="gux-context-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="1,100 of 100,000,001">
        <span aria-label="1,100 of 100,000,001" class="gux-navigation-result">
          1,100 of 100,000,001
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" disabled="" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control with all props in disable mode with no match 1`] = `
<gux-context-search-beta current-match="0" match-count="0">
  <!---->
  <div class="gux-context gux-disabled">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input disabled="true" placeholder="Search" type="text" value="Search Disabled with no Match">
    <div class="gux-context-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="0 of 0">
        <span aria-label="0 of 0" class="gux-navigation-result">
          0 of 0
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" disabled="" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control with all props in disable navigate mode 1`] = `
<gux-context-search-beta current-match="1" disable-navigation="true" match-count="10">
  <!---->
  <div class="gux-context">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input placeholder="Search" type="text" value="Navigation Disabled">
    <div class="gux-context-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="10 Matches">
        <span aria-label="10 Matches" class="gux-navigation-result">
          10 Matches
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control with all props in disable navigate mode with 1 matches 1`] = `
<gux-context-search-beta current-match="0" disable-navigation="true" match-count="1">
  <!---->
  <div class="gux-context">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input placeholder="Search" type="text" value="Navigation Disabled">
    <div class="gux-context-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="1 Match">
        <span aria-label="1 Match" class="gux-navigation-result">
          1 Match
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control with all props in disable navigate mode with 100000000 matches 1`] = `
<gux-context-search-beta current-match="1000" disable-navigation="true" match-count="100000000">
  <!---->
  <div class="gux-context">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input placeholder="Search" type="text" value="Navigation Disabled">
    <div class="gux-context-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="100,000,000 Matches">
        <span aria-label="100,000,000 Matches" class="gux-navigation-result">
          100,000,000 Matches
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control with all props in disable navigate mode with no matches 1`] = `
<gux-context-search-beta current-match="0" disable-navigation="true" match-count="0">
  <!---->
  <div class="gux-context">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input placeholder="Search" type="text" value="Navigation Disabled">
    <div class="gux-context-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="0 Matches">
        <span aria-label="0 Matches" class="gux-navigation-result">
          0 Matches
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control with all props with invalid  match count 1`] = `
<gux-context-search-beta current-match="1000" match-count="abc">
  <!---->
  <div class="gux-context">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input placeholder="Search" type="text" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
    <div class="gux-context-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="0 of 0">
        <span aria-label="0 of 0" class="gux-navigation-result">
          0 of 0
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control with all props with invalid current match 1`] = `
<gux-context-search-beta current-match="100000" match-count="100">
  <!---->
  <div class="gux-context">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input placeholder="Search" type="text" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
    <div class="gux-context-control-panel">
      <div class="gux-navigation-panel" title="1 of 100">
        <span aria-label="1 of 100" class="gux-navigation-result">
          1 of 100
        </span>
        <button aria-label="Previous" class="gux-previous-button" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control with all props with long text 1 match 1`] = `
<gux-context-search-beta current-match="1" match-count="1">
  <!---->
  <div class="gux-context">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input placeholder="Search" type="text" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
    <div class="gux-context-control-panel">
      <div class="gux-navigation-panel" title="1 of 1">
        <span aria-label="1 of 1" class="gux-navigation-result">
          1 of 1
        </span>
        <button aria-label="Previous" class="gux-previous-button" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control with all props with long text 100000 match 1`] = `
<gux-context-search-beta current-match="1000" match-count="100000">
  <!---->
  <div class="gux-context">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input placeholder="Search" type="text" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
    <div class="gux-context-control-panel">
      <div class="gux-navigation-panel" title="1,000 of 100,000">
        <span aria-label="1,000 of 100,000" class="gux-navigation-result">
          1,000 of 100,000
        </span>
        <button aria-label="Previous" class="gux-previous-button" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control with all props with long text no match 1`] = `
<gux-context-search-beta current-match="0" match-count="0">
  <!---->
  <div class="gux-context">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input placeholder="Search" type="text" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
    <div class="gux-context-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="0 of 0">
        <span aria-label="0 of 0" class="gux-navigation-result">
          0 of 0
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control with all props with no match 1`] = `
<gux-context-search-beta current-match="0" match-count="0">
  <!---->
  <div class="gux-context">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input placeholder="Search" type="text" value="Default Search Text">
    <div class="gux-context-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="0 of 0">
        <span aria-label="0 of 0" class="gux-navigation-result">
          0 of 0
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-context-search-beta>
`;

exports[`gux-context-search-beta #render should render default control with all props with short text 100000 match 1`] = `
<gux-context-search-beta current-match="1000" match-count="100000">
  <!---->
  <div class="gux-context">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input placeholder="Search" type="text" value="Lorem ipsum dolor ">
    <div class="gux-context-control-panel">
      <div class="gux-navigation-panel" title="1,000 of 100,000">
        <span aria-label="1,000 of 100,000" class="gux-navigation-result">
          1,000 of 100,000
        </span>
        <button aria-label="Previous" class="gux-previous-button" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-context-search-beta>
`;
